--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
         "postcss": "^8.4.24",
         "tailwindcss": "^3.3.2",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "sweetalert2": "^11.7.12"
     }
 }
