--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "sortablejs": "^1.15.0",
         "sweetalert2": "^11.7.12"
     }
 }
